<?xml version="1.0"?>
<package format="3">
  <name>dingo_msgs</name>
  <version>0.1.6</version>
  <description>Messages exclusive to Dingo, especially for representing low-level motor commands and sensors.</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="jhiggins@clearpathrobotics.com">Jason Higgins</maintainer>

  <license>BSD</license>

  <author email="jhiggins@clearpathrobotics.com">Jason Higgins</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>.

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>.

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
